--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <audio id="s_keyx" src="sounds/keyx.wav"></audio>
     <audio id="s_keyc" src="sounds/keyc.wav"></audio>
 
-    <script src="script.js"></script>
+    <script type="module" src="scripts/script.js"></script>
 
     <footer>Criado por Pierre Paulo</footer>
   </body>
