--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@
     <script type="module" src="scripts/script.js"></script>
 
     <footer>
-      <p>Criado por Pierre Paulo</p>
+      <p>
+        Direitos reservados
+        <a href="https://www.linkedin.com/in/pierre-paulo-temer-88514a189/"></a
+        >Pierre Paulo
+      </p>
     </footer>
   </body>
 </html>
