--- a/index.html
+++ b/index.html
@@ -113,14 +113,24 @@
       aria-label="Visualizador de áudio"
     ></canvas>
 
-    <script type="module" src="scripts/script.js"></script>
+    <section class="key-mapping-section">
+      <h2>Customizar Mapeamento de Teclas</h2>
+      <div id="key-mapping-controls">
+        <!-- Conteúdo gerado dinamicamente via JS -->
+      </div>
+      <button id="save-key-mapping-btn">Salvar Mapeamento</button>
+      <button id="reset-key-mapping-btn">Resetar Mapeamento</button>
+    </section>
 
     <footer>
       <p>
         Direitos reservados
-        <a href="https://www.linkedin.com/in/pierre-paulo-temer-88514a189/"></a
-        >Pierre Paulo
+        <a href="https://www.linkedin.com/in/pierre-paulo-temer-88514a189/"
+          >Pierre Paulo</a
+        >
       </p>
+
+      <script type="module" src="scripts/script.js"></script>
     </footer>
   </body>
 </html>
